# serial-data-protocol

./: .gitignore  BENCHMARK_COMPARISON.md  BENCHMARK_GENERATION_SPEC.md  BENCHMARK_METHODOLOGY.md  BENCHMARK_VERIFICATION_NEEDED.md  BENCHMARK_VERIFICATION_SUMMARY.md  BRING_AI_UP_TO_SPEED.md  BULK_ARRAY_OPTIMIZATION.md  BYTE_MODE_SAFETY.md  CHANGELOG.md  CODEGEN_ANALYSIS.md  CONSTITUTION.md  CPP_IMPLEMENTATION.md  CROSSPLATFORM_HELPERS_ANALYSIS.md  CROSS_PROTOCOL_VERIFIED.md  DESIGN_SPEC.md  DOCUMENTATION_CLEANUP_PLAN.md  DOCUMENTATION_GUIDELINES.md  FLATBUFFERS_CLARIFICATION.md  IMPLEMENTATION_PLAN.md  LANGUAGE_IMPLEMENTATION_GUIDE.md  LICENSE  MESSAGE_MODE_ANALYSIS.md  MESSAGE_MODE_COMPLETENESS.md  MESSAGE_MODE_VERIFIED.md  MODERNIZATION_SUMMARY.md  Makefile  Makefile.vars  OBJCPP_INTEGRATION_RESEARCH.md  OBJCPP_QUICK_START.md  OPTIMIZATION_OPPORTUNITIES.md  OPTIMIZATION_STATUS.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_COMPARISON.md  PROJECT_CLEANUP_ANALYSIS.md  PROJECT_STATUS_ANALYSIS.md  PROTOBUF_FLATBUFFERS_BENCHMARK_ISSUES.md  PROTOBUF_FLATBUFFERS_FIX_COMPLETE.md  QUICK_REFERENCE.md  QUICK_START.md  (+24 more)
.github/: copilot-instructions.md
archive/: COMPRESSION_ANALYSIS.md  CROSS_PLATFORM_ANALYSIS.md  CURRENT_API_PROBLEMS.md  C_API_SPECIFICATION.md  C_API_USABILITY_STATUS.md  C_IMPLEMENTATION_COMPLETE.md  C_QUICK_REFERENCE.md  C_TWO_TIER_API_SUMMARY.md  OPTIONAL_IMPLEMENTATION_ANALYSIS.md  OPTIONAL_STRUCTS_ANALYSIS.md  OPTIONAL_SYNTAX_DECISION.md  RUST_FORMAT_OPTIONAL_ANALYSIS.md  STREAMING_MODE_ANALYSIS.md
archive/v0.2.0-rc1/: RC_SPEC.md
benchmarks/: ARRAYS_COMPARISON.md  BENCHMARK_DATA.md  CROSSLANG_BENCHMARKS.md  GO_RUST_SWIFT_RESULTS.md  GO_VS_RUST_RESULTS.md  MEMORY_ANALYSIS.md  Makefile  PROTOBUF_RESEARCH.md  README.md  RESULTS.md  RUST_API_COMPARISON.md  STRUCTURE.md  audiounit.fbs  comparison_test.go  cpp_vs_go_test.go  cross_protocol_test.go  crosslang_bench_test.go  go.mod  memory_test.go  message_mode_test.go  results.txt  swift_bench.swift
benchmarks/go/: arrays_test.go  comparison_test.go  cross_protocol_test.go  go.mod  go.sum  message_mode_test.go
benchmarks/pb/: audiounit.pb.go
benchmarks/rust/bytemode/: Cargo.toml  alignment_test  arrays_benchmark.rs
benchmarks/rust/bytemode/benches/: arrays_criterion.rs
benchmarks/rust/messagemode/: Cargo.toml  audiounit_benchmark.rs  benchmarks.rs
benchmarks/rustexp/audiounit/: Cargo.toml
benchmarks/rustexp/audiounit/benches/: audiounit_fastpath.rs
benchmarks/rustexp/bytemode/: Cargo.toml
benchmarks/rustexp/bytemode/benches/: arrays_fastpath.rs
benchmarks/standalone/: bench_c  bench_cpp  bench_cpp.cpp
cmd/gen-fixtures/: main.go
cmd/sdp-encode/: main.go
cmd/sdp-gen/: main.go
examples/: objcpp_helpers.hpp
examples/objcpp-example/: README.md
internal/parser/: ast.go  ast_test.go  lexer.go  lexer_test.go  loader.go  loader_test.go  parser.go  parser_test.go
internal/validator/: cycles.go  cycles_test.go  errors.go  naming.go  naming_test.go  reserved.go  reserved_test.go  structure.go  structure_test.go  types.go  types_test.go  validator.go  validator_test.go
internal/wire/: decode.go  encode.go  wire_test.go
macos_testing/: COMPLETE_GUIDE.md  FINAL_RESULTS.md  Makefile  README.md  SWIFT_PACKAGE_HOWTO.md  TESTING_SUMMARY.md  TEST_RESULTS.md
macos_testing/objcpp_test/: README.md  SDPAudioUnit.h  SDPAudioUnit.mm  SDPAudioUnit_ZeroCopy.h  SDPAudioUnit_ZeroCopy.mm  test_objcpp  test_objcpp.mm  test_objcpp_zerocopy  test_objcpp_zerocopy.mm
macos_testing/swift_cpp_test/: Package.swift  README.md  module.modulemap  sdp_bridge.cpp  sdp_bridge.h  test_swift_barebone.swift  test_swift_bridge  test_swift_bridge.swift  test_swift_cpp_direct  test_swift_cpp_direct.swift
rust/: API_DESIGN.md  Cargo.toml  IMPLEMENTATION_STATUS.md
rust/sdp/: Cargo.toml  README.md
rust/sdp-gen/: Cargo.toml
rust/sdp-gen/src/: main.rs
rust/sdp/benches/: api_comparison.rs  generated_bench.rs  wire_bench.rs
rust/sdp/src/: lib.rs  wire.rs  wire_slice.rs
rust/sdp/tests/: crossplatform_test.rs  integration_test.rs
swift/: Package.swift  README.md  RESEARCH_RESULTS.md  UNSAFE_OPTIMIZATION_RESULTS.md
testdata/: MANIFEST.md  MESSAGE_MODE_TESTING_REFACTOR.md  README.md  arrays_structs.sdpb  audiounit.sdp  crossplatform_helper.go  nested.sdp  optional.sdp  plugins.json  primitives.sdp  swift_crossplatform_helper.swift  test_audiounit_encode  test_audiounit_encode.c  test_c_encoder.c  test_primitives_encode  test_primitives_encode.c
testdata/arrays_cpp/: encode.hpp
testdata/audiounit_cpp/: encode.cpp  types.hpp
testdata/binaries/: MESSAGE_MODE_README.md  arrays_primitives.sdpb  audiounit.sdpb  message_point.sdpb  message_rectangle_cpp.sdpb  nested.sdpb  optional.sdpb
testdata/data/: arrays.json  nested.json  optional.json  primitives.json
testdata/flatbuffers/: generate.sh
testdata/optional/: decode.go  encode.go  errors.go
testdata/optional_cpp/: CMakeLists.txt  test_optional.cpp  types.hpp
testdata/primitives_cpp/: decode.hpp
testdata/protobuf/: generate.sh
testdata/rust/arrays/: .sdp-gen.timestamp  Cargo.toml
testdata/rust/arrays/benches/: benchmarks.rs
testdata/rust/arrays/examples/: arrays_of_primitives_server.rs
testdata/rust/arrays/src/: decode.rs  encode.rs  types.rs  wire.rs
testdata/rust/messagemode/: Cargo.toml  README.md
testdata/rust/messagemode/src/: decode.rs  encode.rs  message_decode.rs  message_encode.rs  types.rs
testdata/rust/messagemode/tests/: crosslang_test.rs
testdata/rust/nested/: .sdp-gen.timestamp  Cargo.toml
testdata/rust/nested/benches/: benchmarks.rs
testdata/rust/nested/examples/: point_server.rs
testdata/rust/nested/src/: decode.rs  encode.rs  lib.rs  message_decode.rs  message_encode.rs  types.rs
testdata/schemas/: arrays.sdp  audiounit.fbs  audiounit.proto  complex.sdp  message_test.sdp  valid_basic.sdp  valid_complex.sdp  valid_crlf.sdp
testdata/tools/: encode_messagemode_reference.go
testdata/valid_basic/: decode.go  encode.go
tests/: run_benchmarks.sh  test_cpp.sh  test_go.sh  test_rust.sh  test_swift.sh  verify_wire_format.sh
(+1048 files in other folders)
