[workspace]
members = ["sdp"]
resolver = "2"

[workspace.package]
version = "0.2.0-rc1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/shaban/serial-data-protocol"

[workspace.dependencies]
# Shared dependencies
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
