[package]
name = "sdp-gen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Code generator for Serial Data Protocol schemas"
keywords = ["codegen", "serialization", "protocol"]

[[bin]]
name = "sdp-gen"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
