[package]
name = "sdp-rust-messagemode-benchmarks"
version = "0.2.0-rc1"
edition = "2021"

[dependencies]
sdp-parameter = { path = "../../../testdata/generated/rust/audiounit" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "audiounit"
path = "audiounit_benchmark.rs"
harness = false

[profile.release]
opt-level = 2
codegen-units = 16
lto = false
