[package]
name = "sdp-rustexp-messagemode-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
sdp-parameter = { path = "../../../testdata/generated/rustexp/audiounit" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "audiounit_fastpath"
harness = false

[profile.release]
opt-level = 2
codegen-units = 16
lto = false

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
