[package]
name = "sdp-point"
version = "0.2.0-rc1"
edition = "2021"
authors = ["Serial Data Protocol Contributors"]
license = "MIT"
description = "Generated SDP package"

[dependencies]
# Only external dependency: byteorder for endianness handling
byteorder = "1.5"

[features]
# Benchmark server mode (for cross-language performance testing)
# Build with: cargo build --release --example point_server --features bench-server
bench-server = []

[profile.dev]
# Fast compilation for development
opt-level = 0              # No optimization
debug = true               # Full debug info
incremental = true         # Incremental compilation
codegen-units = 256        # Maximum parallelism for fastest builds

[profile.release]
# Balanced optimizations for reasonable build times
opt-level = 2              # Good optimization without extreme compile times
lto = "thin"               # Link-time optimization (thin = good balance)
codegen-units = 16         # Parallel codegen for faster builds
panic = 'abort'            # Smaller binary, no unwinding
strip = true               # Strip symbols from binary
overflow-checks = false    # Disable integer overflow checks in release
debug = false              # No debug info
incremental = true         # Enable incremental for faster rebuilds

# Moderate optimization for dependencies (faster builds)
[profile.release.package."*"]
opt-level = 2

# Development dependencies for benchmarking
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

# Criterion benchmark configuration
[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false  # Use Criterion instead of default harness
